# statistics_for_polars

./: .gitignore  README.md  STATISTICS_GUIDE.md  _utils.py  descriptive.py  giberish.py  guide.md  pyproject.toml
multivariate/: comparison.py  correlation.py  descriptive.py  dimension.py  multivarié_guide.md  regression.py  tests.py
polars_stats/: __init__.py  _utils.py  wrappers.py
polars_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polars_stats/multivariate/: __init__.py  comparison.py  correlation.py  descriptive.py  dimension.py  regression.py  tests.py
polars_stats/univariate/: __init__.py  distribution.py  inference.py  tests.py
tests/: test_multivariate_comparison.py  test_multivariate_descriptive.py  test_multivariate_dimension.py  test_multivariate_regression.py  test_multivariate_tests.py  test_univariate_descriptive.py  test_univariate_distribution.py  test_univariate_inference.py  test_univariate_tests.py
univariate/: distribution.py  giberish.py  inference.py  tests.py
