[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-stats"
version = "0.1.0"
description = "Statistical analysis toolkit for Polars — descriptive stats, hypothesis tests, regression, and more."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
]

[project.optional-dependencies]
tests = [
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]
ml = [
    "scikit-learn>=1.3.0",
]
posthoc = [
    "scikit-posthocs>=0.9.0",
]
full = [
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "scikit-posthocs>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "polars-stats[full]",
]

[tool.setuptools.packages.find]
include = ["polars_stats*"]